--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   http: ^0.13.3
   flutter_launcher_icons: ^0.9.2
   provider: ^6.0.0
+  easy_localization: ^3.0.0
+  easy_localization_loader:
+    git: https://github.com/aissat/easy_localization_loader.git
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +64,8 @@ flutter_icons:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - assets/translations/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
