--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,8 +42,7 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.oolaa.group.veguma_special"
+        applicationId "com.oolaa.group.veguma_special"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
