--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.0.0
   flutter_typeahead: ^3.2.3
   easy_localization: ^3.0.0
+  flutter_datetime_picker: ^1.5.1
   easy_localization_loader:
     git: https://github.com/aissat/easy_localization_loader.git
 
