--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,18 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.3
   provider: ^6.0.0
+  intl: ^0.17.0
   flutter_typeahead: ^3.2.3
   easy_localization: ^3.0.0
   flutter_datetime_picker: ^1.5.1
   easy_localization_loader:
     git: https://github.com/aissat/easy_localization_loader.git
+
+  # for pdf creation
+  pdf: ^3.6.5
+  path_provider: ^2.0.8
+
+  share_plus: ^3.0.4
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +62,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/translations/
+    - assets/OpenSans.ttf
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
