--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.3
   provider: ^6.0.0
-  intl: ^0.17.0
+  intl: 0.18.0
   flutter_typeahead: ^3.2.3
   easy_localization: ^3.0.0
   flutter_datetime_picker: ^1.5.1
@@ -48,7 +48,7 @@ dependencies:
   pdf: ^3.6.5
   path_provider: ^2.0.8
 
-  share_plus: ^3.0.4
+  share_plus: 5.0.0
 
 dev_dependencies:
   flutter_test:
